BuildHughes/translation-tool/inputs/source_meta/objects/Location_Order__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Seasonal Suspension</fullName>
                </value>
                <value>
                    <fullName>De-Install</fullName>
                </value>
                <value>
                    <fullName>FAP Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_On_Upfront_Fee_Credit_Card_Type__c</fullName>
        <label>Add On Upfront Fee Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Cabal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_On_Upfront_Fee_Payment_Boleto_Id__c</fullName>
        <label>Add On Upfront Fee Payment Boleto Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_On_Upfront_Fee_Payment_Method__c</fullName>
        <label>Add On Upfront Fee Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY () - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Antenna_Size__c</fullName>
        <label>Antenna Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availibility__c</fullName>
        <label>Availibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Band__c</fullName>
        <label>Band</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beam_ID__c</fullName>
        <label>Beam ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_County__c</fullName>
        <label>Billing Address County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Barcode__c</fullName>
        <label>Billing Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Complement__c</fullName>
        <label>Billing Complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Day_of_Month__c</fullName>
        <label>Billing Day of Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Neighborhood__c</fullName>
        <label>Billing Neighborhood</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank_Account_Number__c</fullName>
        <label>Brazil Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank_Account_Owner__c</fullName>
        <label>Brazil Bank Account Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank_Account_Verifier_Digit__c</fullName>
        <label>Brazil Bank Account Verifier Digit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank_Agency_Number__c</fullName>
        <label>Brazil Bank Agency Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank_Agency_Verifier_Digit__c</fullName>
        <label>Brazil Bank Agency Verifier Digit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank_Code__c</fullName>
        <label>Brazil Bank Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazil_Bank__c</fullName>
        <label>Brazil Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Activity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Activity</label>
        <referenceTo>Business_Activity__c</referenceTo>
        <relationshipLabel>Location Orders</relationshipLabel>
        <relationshipName>Location_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Model__c</fullName>
        <defaultValue>&quot;Consumer&quot;</defaultValue>
        <label>Business Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_ID__c</fullName>
        <label>Customer ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNPJ__c</fullName>
        <label>CNPJ</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF__c</fullName>
        <label>CPF</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_RP_Contact_name__c</fullName>
        <formula>Contact__r.FirstName+&apos; &apos;+Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_RP_ProtocolID__c</fullName>
        <formula>Case__r.HSvc_ProtocolId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case ProtocolID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Location Orders</relationshipLabel>
        <relationshipName>Location_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complement__c</fullName>
        <label>Complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_DayPhone__c</fullName>
        <label>Contact Day Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_FirstName__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_LastName__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_NightPhone__c</fullName>
        <label>Contact Night Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Location Orders</relationshipLabel>
        <relationshipName>Location_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Cabal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Company_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Company Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Location Orders</relationshipLabel>
        <relationshipName>Location_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Company__c</fullName>
        <label>Customer Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Location_ID__c</fullName>
        <label>Customer Location ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Location_Name__c</fullName>
        <label>Customer Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Order_ID__c</fullName>
        <label>Customer Order ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Program_Code__c</fullName>
        <description>All template line items for a given template shall have same program code.</description>
        <label>DSS Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Response_Code__c</fullName>
        <label>DSS Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Response_Description__c</fullName>
        <label>DSS Response Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSS_Response_Status__c</fullName>
        <label>DSS Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Price_With_Tax__c</fullName>
        <label>Display Price With Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Price__c</fullName>
        <label>Display Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DistributorPartnerId__c</fullName>
        <label>Distributor Partner Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Master_FSO__c</fullName>
        <label>Existing Master FSO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Segment__c</fullName>
        <label>GL Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_Location_ID__c</fullName>
        <description>Salesforce will always rely on HNS Location ID returned by DSS and populate this.</description>
        <label>HNS Location ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Address1__c</fullName>
        <label>Install Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Address2__c</fullName>
        <label>Install Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Address_Geo__c</fullName>
        <label>Install Address Geo</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Install_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Install Address Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Address_Verified__c</fullName>
        <label>Install Address Verified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_City__c</fullName>
        <label>Install City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Country__c</fullName>
        <label>Install Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_State__c</fullName>
        <label>Install State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Zip__c</fullName>
        <label>Install Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Project_Name__c</fullName>
        <label>Installation Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Incomplete_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Incomplete Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Postal_Mail_Required_for_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Postal Mail Required for Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Postal_Mail_Required_for_Service_Cont__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Postal Mail Required for Service Cont</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landmark__c</fullName>
        <label>Landmark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Account__c</fullName>
        <label>Location Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Location Orders (Location Account)</relationshipLabel>
        <relationshipName>Location_Orders1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mother_Name__c</fullName>
        <label>Mother&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Scenario__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MoveScenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Municipal_Registry__c</fullName>
        <label>Municipal Registry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <label>Neighborhood</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Master_FSO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Master FSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ODU_Power__c</fullName>
        <label>ODU Power</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <label>Offer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Offers__c</referenceTo>
        <relationshipLabel>Location Orders</relationshipLabel>
        <relationshipName>Location_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Effective_Date__c</fullName>
        <label>Order Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Offer</label>
        <referenceTo>Order_Offer__c</referenceTo>
        <relationshipLabel>Location Orders</relationshipLabel>
        <relationshipName>Location_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Received_Date__c</fullName>
        <label>Order Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Web - Indicates Self-Care
Phone - Mobile App
IVR - IVR Application
OPS - Script used by OPS for bulk FAP Purchases</description>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>OPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_Install_Address_Reason__c</fullName>
        <label>Override Install Address Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Street Match Not Found</fullName>
                </value>
                <value>
                    <fullName>City/Zip Match Not Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_Install_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Install Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Shipping_Address_Reason__c</fullName>
        <label>Override Shipping Address Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Street Match Not Found</fullName>
                </value>
                <value>
                    <fullName>City/Zip Match Not Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Contract_Number__c</fullName>
        <label>Physical Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Polarization__c</fullName>
        <label>Polarization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Installation_Date__c</fullName>
        <description>Preferred Installation Date must be 3 or more days from the order Placement</description>
        <label>Preferred Installation Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocol_ID__c</fullName>
        <label>Protocol ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAN_Prefix__c</fullName>
        <label>SAN Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Enable_Number__c</fullName>
        <label>SMS Enable Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SP_Partner_Id__c</fullName>
        <label>SP Partner Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satellite_ID__c</fullName>
        <label>Satellite ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address1__c</fullName>
        <label>Shipping Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address2__c</fullName>
        <label>Shipping Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Geo__c</fullName>
        <label>Shipping Address Geo</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping Address Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Verified__c</fullName>
        <label>Shipping Address Verified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Partially Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip__c</fullName>
        <label>Shipping Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Customer_ID__c</fullName>
        <label>Source Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Registry__c</fullName>
        <label>State Registry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strata__c</fullName>
        <label>Strata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Bandwidth__c</fullName>
        <label>Token Bandwidth (GB)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Token_Billing_Deal_Name__c</fullName>
        <label>Token Billing Deal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Price__c</fullName>
        <label>Token Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tradestyle__c</fullName>
        <label>Tradestyle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendEmail__c</fullName>
        <description>##Conga created btn:00bS0000000NpkO</description>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;templateid=00PS0000001PYC4 &quot; + 
&quot;&amp;cetid=a6uS0000000ECxD&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>sendEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendEmil1__c</fullName>
        <description>##Conga created btn:00bS0000000NpkO</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=00PS0000001PYC4&quot; + 
&quot;&amp;cetid=a6uS0000000ECxD&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>sendEmil1</label>
        <type>Text</type>
    </fields>
    <label>Location Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Action__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LOCORD-{0000000000}</displayFormat>
        <label>Location Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>